[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.1"
rand = "0.8.4"
dialoguer={version="0.9.0", features=["fuzzy-select"]}
console="0.15.0"
git2="0.13.25"
